# objectscale-client

./: Cargo.toml  README.md
auto-bindgen/: Cargo.toml  README.md
auto-bindgen/src/: gen.rs  lib.rs  main.rs  parser.rs  serde.rs
c/: Cargo.toml  build.rs  objectscale_client.h
c/src/: client.rs  ffi.rs  lib.rs
examples/: Cargo.toml  README.md
golang/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  go.mod
golang/examples/: main.go
golang/examples/create_account/: main.go
golang/examples/delete_account/: main.go
golang/examples/get_account/: main.go
golang/examples/list_accounts/: main.go
golang/pkg/: bucket.go  buffer.go  client.go  ffi.go  iam.go  objectscale_client.h  string.go  tenant.go
golang/src/: buffer.rs  client.rs  error.rs  ffi.rs  iam.rs  lib.rs  string.rs
golang/tests/: bucket_test.go  common.go  iam_test.go  tenant_test.go
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/examples/: create_account.py  delete_account.py  get_account.py  list_accounts.py
python/src/: bucket.rs  client.rs  iam.rs  lib.rs  tenant.rs
src/: api_client.rs  bucket.rs  client.rs  iam.rs  lib.rs  response.rs  tenant.rs
tests/: bucket_test.rs  iam_test.rs  tenant_test.rs
tests/common/: mod.rs
