[package]
name = "objectscale-client"
version = "0.1.0"
edition = "2021"
categories = ["network-programming"]
keywords = ["objectscale", "client"]
description = "A Rust client for ObjectScale Management."
authors = ["Luis Liu <luis_liu@dell.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "examples",
]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
