[package]
name = "objectscale-client"
version = "0.2.0"
edition = "2021"
categories = ["network-programming"]
keywords = ["objectscale", "client"]
description = "A Rust client for ObjectScale Management."
authors = ["Luis Liu <luis_liu@dell.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/vangork/objectscale-client"
exclude = [
    "golang/*",
    "tests/*",
    "rustfmt.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "c",
    "examples",
    "python",
    "auto-bindgen"
]

[dependencies]
anyhow = "1.0"
derive_builder = "0.20.0"
quick-xml = { version = "0.36.0", features = ["serialize"] }
reqwest = { version = "0.12.4", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.5"
serde_json = "1.0"
