[package]
name = "objectscale-client-examples"
version = "0.2.0"
edition = "2021"
categories = ["network-programming"]
keywords = ["objectscale", "client"]
description = "Examples for ObjectScale client."
authors = ["Luis Liu <luis_liu@dell.com>"]
license = "Apache-2.0"
repository = "https://github.com/vangork/objectscale-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objectscale-client = { path = "../" }
