[package]
name = "objectscale-client-golang"
version = "0.1.0"
edition = "2021"
categories = ["network-programming"]
keywords = ["objectscale", "client"]
description = "Examples for ObjectScale Management client."
authors = ["Luis Liu <luis_liu@dell.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errno = "0.2"
objectscale-client = { path = "../", version = "0.1.0"}

[build-dependencies]
cbindgen = "0.26.0"

[lib]
name = "objectscale_client"
crate-type = ["cdylib"]
