[package]
name = "objectscale-client-golang"
version = "0.1.0"
edition = "2021"
categories = ["network-programming"]
keywords = ["objectscale", "client"]
description = "ObjectScale golang client."
authors = ["Luis Liu <luis_liu@dell.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/dell/objectscale-client"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errno = "0.2"
objectscale-client = { path = "../" }

[build-dependencies]
cbindgen = "0.26.0"

[lib]
name = "objectscale_client"
crate-type = ["cdylib"]
