[package]
name = "objectscale-client-python"
version = "0.2.1"
edition = "2021"
categories = ["network-programming"]
keywords = ["objectscale", "client"]
description = "ObjectScale python client."
authors = ["Luis Liu <luis_liu@dell.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/vangork/objectscale-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objectscale-client = { path = "../" }
pyo3 = { version = "0.21.2" , features = ["extension-module"]}

[lib]
name = "objectscale_client"
crate-type = ["cdylib"]
